# update-alternatives

./: .editorconfig  Cargo.toml  README.md  renovate.json  update-alternatives.hook
.cargo/: config.toml
.github/: dependabot.yml
src/: alternative.rs  alternative_db.rs  alternative_list.rs  filesystem.rs  main.rs
