[package]
name = "update-alternatives"
version = "0.6.0"
authors = ["gregjm@umich.edu", "git@fthomys.me"]

[dependencies]
clap = { version = "4.5.56", features = ["cargo"] }
libc = "0.2"
serde = "1.0"
serde_derive = "1.0.228"
serde_json = "1.0.149"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
split-debuginfo = "off"

[profile.dev]
debug = 0
split-debuginfo = "packed"
